--- a/404.html
+++ b/404.html
@@ -18,25 +18,17 @@ layout: default
 </style>
 
 <script>
-var allposts = [];  
-    function redirectToCorrectPage() {  
-        {% for post in site.posts %}  
-            allposts.push("{{ site.url }}{{ post.url }}");  
-        {% endfor %}  
-        var url = window.location.toString();  
-        if (url.slice(-1) === "/") {  
-            url = url.slice(0, -1);  
-        }  
-        var allpostsUpperCase = allposts.map(function(value) {  
-            return value.toUpperCase();  
-        });  
-        var i = allpostsUpperCase.indexOf(url.toUpperCase());  
-        if (i != -1) {  
-            console.log(allposts[i]);  
-            window.location = allposts[i];  
-        }  
-    }  
-    window.onload = redirectToCorrectPage; 
+
+function redirectToCorrectPage() {  
+
+    var url = window.location.toString();  
+    if (url.slice(-1) === "/") {  
+        url = url.slice(0, -1);  
+    }      
+    window.location = url.toLowerCase();  
+    
+}  
+window.onload = redirectToCorrectPage; 
 </script>
 
 <div class="container">
